logs/eventsourcing-async.log
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiopg'...
Listing './lib/python3.5/site-packages/aiopg/sa'...
Listing './lib/python3.5/site-packages/aiopg-0.13.2.dist-info'...
Listing './lib/python3.5/site-packages/aiounittest'...
Listing './lib/python3.5/site-packages/aiounittest-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/eventsource'...
Listing './lib/python3.5/site-packages/eventsource/application'...
Listing './lib/python3.5/site-packages/eventsource/ext'...
Listing './lib/python3.5/site-packages/eventsource/model'...
Compiling './lib/python3.5/site-packages/eventsource/model/aggregate.py'...
***   File "./lib/python3.5/site-packages/eventsource/model/aggregate.py", line 11
    _pending_events: Deque[DomainEvent]
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eventsource/services'...
Listing './lib/python3.5/site-packages/eventsourcing_async-0.0.1a0.egg-info'...
Listing './lib/python3.5/site-packages/peewee-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/peewee_async-0.5.10.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/application.py'...
***   File "./lib/python3.5/site-packages/tests/application.py", line 25
    __items: List[ToDoItem] = []
           ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
